added more section & emplement all functionalities

--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
   "dependencies": {
     "@left4code/svg-renderer": "^1.0.4",
     "@tailwindcss/vite": "^4.1.15",
+    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.4.0",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.15"
+    "tailwindcss": "^4.1.15",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
